ecmascript/parser/tests/test262-error-references/fail/42cb3f2a38cb2930.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/42cb3f2a38cb2930.js:3:3
  |
3 | */]
  |   ^

